[gd_scene load_steps=20 format=3 uid="uid://c6kp61y0ycsji"]

[ext_resource type="Script" path="res://addons/region-editor/scenes/region_editor.gd" id="1_ckiwb"]
[ext_resource type="Texture2D" uid="uid://vflovc0o4aq6" path="res://addons/region-editor/icons/Remove.svg" id="1_ut1lj"]
[ext_resource type="Texture2D" uid="uid://ha75aikaxbsf" path="res://addons/region-editor/icons/Add.svg" id="2_wadlq"]
[ext_resource type="PackedScene" uid="uid://e76kg1qxu3ui" path="res://addons/region-editor/scenes/texture_container.tscn" id="3_vw0pm"]
[ext_resource type="Texture2D" uid="uid://d2al6v0xqecvv" path="res://addons/region-editor/icons/Sort.svg" id="5_nk6fv"]
[ext_resource type="Texture2D" uid="uid://cgs72ixrxnpng" path="res://icon.svg" id="6_74mwy"]
[ext_resource type="PackedScene" uid="uid://dkc6oqbeijd2o" path="res://addons/region-editor/scenes/texture_setup.tscn" id="6_316gy"]
[ext_resource type="PackedScene" uid="uid://dr6xso5j2umfq" path="res://addons/region-editor/scenes/region_previewer_container.tscn" id="7_2ci81"]
[ext_resource type="Texture2D" uid="uid://bknubkna4onbt" path="res://addons/region-editor/icons/Save.svg" id="7_ie3u4"]
[ext_resource type="PackedScene" uid="uid://cou3we204lm21" path="res://addons/region-editor/scenes/region_properties.tscn" id="8_1804p"]
[ext_resource type="Texture2D" uid="uid://dkunqhsasdi1r" path="res://addons/region-editor/icons/FileAccess.svg" id="8_fyfk6"]
[ext_resource type="Texture2D" uid="uid://lounnd68a2s5" path="res://addons/region-editor/icons/Close.svg" id="10_g6a71"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lc4oc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6nfmk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pihnv"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_78sjt"]
texture = ExtResource("5_nk6fv")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hj2w1"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_u3s1t"]
texture = ExtResource("6_74mwy")

[sub_resource type="TileSet" id="TileSet_epqgv"]
sources/0 = SubResource("TileSetAtlasSource_u3s1t")

[node name="RegionEditor" type="PanelContainer"]
custom_minimum_size = Vector2(0, 300)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -300.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_ckiwb")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 2

[node name="vbox" type="VBoxContainer" parent="HSplitContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Label" type="Label" parent="HSplitContainer/vbox"]
layout_mode = 2
text = "Textures:"

[node name="TextureContainer" parent="HSplitContainer/vbox" instance=ExtResource("3_vw0pm")]
unique_name_in_owner = true
layout_mode = 2

[node name="TexturesOptions" type="HBoxContainer" parent="HSplitContainer/vbox"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="DeleteTexture" type="Button" parent="HSplitContainer/vbox/TexturesOptions"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
tooltip_text = "Delete Texture."
theme_override_styles/focus = SubResource("StyleBoxEmpty_lc4oc")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_lc4oc")
theme_override_styles/hover = SubResource("StyleBoxEmpty_lc4oc")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_lc4oc")
theme_override_styles/normal = SubResource("StyleBoxEmpty_lc4oc")
icon = ExtResource("1_ut1lj")
icon_alignment = 1
expand_icon = true

[node name="add" type="Button" parent="HSplitContainer/vbox/TexturesOptions"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
tooltip_text = "Add new Texture."
theme_override_styles/focus = SubResource("StyleBoxEmpty_6nfmk")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_6nfmk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_6nfmk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_6nfmk")
theme_override_styles/normal = SubResource("StyleBoxEmpty_6nfmk")
icon = ExtResource("2_wadlq")
icon_alignment = 1
expand_icon = true

[node name="SortTextures" type="OptionButton" parent="HSplitContainer/vbox/TexturesOptions"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
tooltip_text = "Sort Textures."
theme_override_icons/icon = SubResource("AtlasTexture_pihnv")
theme_override_styles/focus = SubResource("StyleBoxTexture_78sjt")
theme_override_styles/disabled = SubResource("StyleBoxTexture_78sjt")
theme_override_styles/hover = SubResource("StyleBoxTexture_78sjt")
theme_override_styles/pressed = SubResource("StyleBoxTexture_78sjt")
theme_override_styles/normal = SubResource("StyleBoxTexture_78sjt")
theme_override_icons/arrow = SubResource("AtlasTexture_pihnv")
expand_icon = true
fit_to_longest_item = false
item_count = 2
popup/item_0/text = "Sort by Name (Ascending)"
popup/item_1/text = "Sort by Name (Descending)"
popup/item_1/id = 1

[node name="TextureEditor" type="PanelContainer" parent="HSplitContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="SplitContainer" type="SplitContainer" parent="HSplitContainer/TextureEditor"]
layout_mode = 2

[node name="vbox" type="VBoxContainer" parent="HSplitContainer/TextureEditor/SplitContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HSplitContainer/TextureEditor/SplitContainer/vbox"]
layout_mode = 2
text = "Setup:"

[node name="TextureSetup" parent="HSplitContainer/TextureEditor/SplitContainer/vbox" instance=ExtResource("6_316gy")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Setup" type="HSplitContainer" parent="HSplitContainer/TextureEditor/SplitContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="hbox" type="VBoxContainer" parent="HSplitContainer/TextureEditor/SplitContainer/Setup"]
layout_mode = 2
size_flags_horizontal = 3

[node name="hbox" type="HBoxContainer" parent="HSplitContainer/TextureEditor/SplitContainer/Setup/hbox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="Label" type="Label" parent="HSplitContainer/TextureEditor/SplitContainer/Setup/hbox/hbox"]
layout_mode = 2
text = "Regions:"

[node name="hbox" type="HBoxContainer" parent="HSplitContainer/TextureEditor/SplitContainer/Setup/hbox/hbox"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="HSplitContainer/TextureEditor/SplitContainer/Setup/hbox/hbox/hbox"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_hj2w1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_hj2w1")
theme_override_styles/hover = SubResource("StyleBoxEmpty_hj2w1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_hj2w1")
theme_override_styles/normal = SubResource("StyleBoxEmpty_hj2w1")
icon = ExtResource("7_ie3u4")
icon_alignment = 1
expand_icon = true

[node name="Button2" type="Button" parent="HSplitContainer/TextureEditor/SplitContainer/Setup/hbox/hbox/hbox"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_hj2w1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_hj2w1")
theme_override_styles/hover = SubResource("StyleBoxEmpty_hj2w1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_hj2w1")
theme_override_styles/normal = SubResource("StyleBoxEmpty_hj2w1")
icon = ExtResource("8_fyfk6")
icon_alignment = 1
expand_icon = true

[node name="hsplitcont" type="HSplitContainer" parent="HSplitContainer/TextureEditor/SplitContainer/Setup/hbox"]
layout_mode = 2
size_flags_vertical = 3

[node name="RegionPreviewerContainer" parent="HSplitContainer/TextureEditor/SplitContainer/Setup/hbox/hsplitcont" instance=ExtResource("7_2ci81")]
unique_name_in_owner = true
layout_mode = 2

[node name="RegionPropertiesDock" type="PanelContainer" parent="HSplitContainer/TextureEditor/SplitContainer/Setup/hbox/hsplitcont"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="vbox" type="VBoxContainer" parent="HSplitContainer/TextureEditor/SplitContainer/Setup/hbox/hsplitcont/RegionPropertiesDock"]
layout_mode = 2

[node name="hbox" type="HBoxContainer" parent="HSplitContainer/TextureEditor/SplitContainer/Setup/hbox/hsplitcont/RegionPropertiesDock/vbox"]
layout_mode = 2

[node name="close" type="TextureButton" parent="HSplitContainer/TextureEditor/SplitContainer/Setup/hbox/hsplitcont/RegionPropertiesDock/vbox/hbox"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture_normal = ExtResource("10_g6a71")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="HSplitContainer/TextureEditor/SplitContainer/Setup/hbox/hsplitcont/RegionPropertiesDock/vbox/hbox"]
layout_mode = 2
text = "Region Properties:"

[node name="RegionProperties" parent="HSplitContainer/TextureEditor/SplitContainer/Setup/hbox/hsplitcont/RegionPropertiesDock/vbox" instance=ExtResource("8_1804p")]
unique_name_in_owner = true
layout_mode = 2

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_epqgv")

[connection signal="resource_picker_retrieved" from="." to="HSplitContainer/TextureEditor/SplitContainer/vbox/TextureSetup" method="_on_region_editor_resource_picker_retrieved"]
[connection signal="texture_region_edited" from="." to="HSplitContainer/TextureEditor/SplitContainer/Setup/hbox/hsplitcont/RegionPropertiesDock/vbox/RegionProperties" method="_on_region_editor_texture_region_edited"]
[connection signal="empty_container" from="HSplitContainer/vbox/TextureContainer" to="." method="_on_texture_container_empty_container"]
[connection signal="texture_deleted" from="HSplitContainer/vbox/TextureContainer" to="." method="_on_texture_container_texture_deleted"]
[connection signal="texture_selected" from="HSplitContainer/vbox/TextureContainer" to="." method="_on_texture_container_texture_selected"]
[connection signal="texture_selected" from="HSplitContainer/vbox/TextureContainer" to="HSplitContainer/TextureEditor/SplitContainer/vbox/TextureSetup" method="_on_texture_selected"]
[connection signal="textures_requested" from="HSplitContainer/vbox/TextureContainer" to="." method="_on_texture_container_textures_requested"]
[connection signal="pressed" from="HSplitContainer/vbox/TexturesOptions/DeleteTexture" to="." method="_on_delete_texture"]
[connection signal="pressed" from="HSplitContainer/vbox/TexturesOptions/add" to="." method="_on_add_texture"]
[connection signal="item_selected" from="HSplitContainer/vbox/TexturesOptions/SortTextures" to="." method="_on_sort_item_selected"]
[connection signal="resource_picker_requested" from="HSplitContainer/TextureEditor/SplitContainer/vbox/TextureSetup" to="." method="_on_resource_picker_requested"]
[connection signal="texture_changed" from="HSplitContainer/TextureEditor/SplitContainer/vbox/TextureSetup" to="HSplitContainer/vbox/TextureContainer" method="_on_texture_setup_texture_changed"]
[connection signal="texture_region_editor_requested" from="HSplitContainer/TextureEditor/SplitContainer/vbox/TextureSetup" to="." method="_on_texture_region_editor_requested"]
[connection signal="texture_renamed" from="HSplitContainer/TextureEditor/SplitContainer/vbox/TextureSetup" to="HSplitContainer/vbox/TextureContainer" method="_on_texture_setup_texture_renamed"]
[connection signal="dragged" from="HSplitContainer/TextureEditor/SplitContainer/Setup/hbox/hsplitcont" to="HSplitContainer/TextureEditor/SplitContainer/Setup/hbox/hsplitcont/RegionPreviewerContainer" method="_on_hsplitcont_dragged"]
[connection signal="region_selected" from="HSplitContainer/TextureEditor/SplitContainer/Setup/hbox/hsplitcont/RegionPreviewerContainer" to="." method="_on_region_previewer_container_region_selected"]
[connection signal="visibility_changed" from="HSplitContainer/TextureEditor/SplitContainer/Setup/hbox/hsplitcont/RegionPropertiesDock" to="HSplitContainer/TextureEditor/SplitContainer/Setup/hbox/hsplitcont/RegionPreviewerContainer" method="_on_region_properties_dock_visibility_changed"]
[connection signal="pressed" from="HSplitContainer/TextureEditor/SplitContainer/Setup/hbox/hsplitcont/RegionPropertiesDock/vbox/hbox/close" to="HSplitContainer/TextureEditor/SplitContainer/Setup/hbox/hsplitcont/RegionPropertiesDock" method="hide"]
